tooling/nargo_cli/tests/snapshots/execution_success/array_dynamic_main_output/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 10,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "index",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 10,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _40",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10]",
    "public parameters indices : []",
    "return value indices : [_11, _12, _13, _14, _15, _16, _17, _18, _19, _20]",
    "INIT (id: 0, len: 10, witnesses: [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9])",
    "EXPR [ (-1, _21) 0 ]",
    "MEM (id: 0, write EXPR [ (1, _21) 0 ] at: EXPR [ (1, _10) 0 ]) ",
    "MEM (id: 0, read at: EXPR [ (1, _21) 0 ], value: EXPR [ (1, _22) 0 ]) ",
    "EXPR [ (-1, _23) 1 ]",
    "MEM (id: 0, read at: EXPR [ (1, _23) 0 ], value: EXPR [ (1, _24) 0 ]) ",
    "EXPR [ (-1, _25) 2 ]",
    "MEM (id: 0, read at: EXPR [ (1, _25) 0 ], value: EXPR [ (1, _26) 0 ]) ",
    "EXPR [ (-1, _27) 3 ]",
    "MEM (id: 0, read at: EXPR [ (1, _27) 0 ], value: EXPR [ (1, _28) 0 ]) ",
    "EXPR [ (-1, _29) 4 ]",
    "MEM (id: 0, read at: EXPR [ (1, _29) 0 ], value: EXPR [ (1, _30) 0 ]) ",
    "EXPR [ (-1, _31) 5 ]",
    "MEM (id: 0, read at: EXPR [ (1, _31) 0 ], value: EXPR [ (1, _32) 0 ]) ",
    "EXPR [ (-1, _33) 6 ]",
    "MEM (id: 0, read at: EXPR [ (1, _33) 0 ], value: EXPR [ (1, _34) 0 ]) ",
    "EXPR [ (-1, _35) 7 ]",
    "MEM (id: 0, read at: EXPR [ (1, _35) 0 ], value: EXPR [ (1, _36) 0 ]) ",
    "EXPR [ (-1, _37) 8 ]",
    "MEM (id: 0, read at: EXPR [ (1, _37) 0 ], value: EXPR [ (1, _38) 0 ]) ",
    "EXPR [ (-1, _39) 9 ]",
    "MEM (id: 0, read at: EXPR [ (1, _39) 0 ], value: EXPR [ (1, _40) 0 ]) ",
    "EXPR [ (1, _11) (-1, _22) 0 ]",
    "EXPR [ (1, _12) (-1, _24) 0 ]",
    "EXPR [ (1, _13) (-1, _26) 0 ]",
    "EXPR [ (1, _14) (-1, _28) 0 ]",
    "EXPR [ (1, _15) (-1, _30) 0 ]",
    "EXPR [ (1, _16) (-1, _32) 0 ]",
    "EXPR [ (1, _17) (-1, _34) 0 ]",
    "EXPR [ (1, _18) (-1, _36) 0 ]",
    "EXPR [ (1, _19) (-1, _38) 0 ]",
    "EXPR [ (1, _20) (-1, _40) 0 ]"
  ],
  "debug_symbols": "dY/RCoMwDEX/Jc990MEm+CtjSK1RCiEtsR0M8d8XxW7uYS9Nk9tzm7vAgH2eOs9jmKG9L9CLJ/JTR8HZ5APrdFkNlLZLgqgjOOlKRSvICVrORAaelvL+aI6W95qsqFoZQB60quHoCbfbar509R9tbgfbNB/4qvRDO+u8/OwLNbS1gYue62Yp3vaER5IxszsFS69YlBI9SnA4ZMHNdNf0mzc=",
  "file_map": {
    "50": {
      "source": "fn main(mut x: [Field; 10], index: u32) -> pub [Field; 10] {\n    x[index] = 0;\n    x\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
